--- a/public/index.html
+++ b/public/index.html
@@ -1,7 +1,10 @@
 <!DOCTYPE html>
-<html lang="ru">
-
-<head>
+<html lang="en">
+  <head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width,initial-scale=1.0">
+    <link rel="icon" href="<%= BASE_URL %>favicon.ico">
     <title>Главная - ИнстаКлон социальная сеть</title>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
@@ -33,8 +36,7 @@
     <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
     <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
 <![endif]-->
-
-</head>
+  </head>
   <body>
     <noscript>
       <strong>We're sorry but insta-clone doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
