--- a/public/index.html
+++ b/public/index.html
@@ -15,7 +15,7 @@
     <meta name="description" content="Описание страницы...">
 
     <!-- Syles -->
-    <link rel="stylesheet" href="css/main.css">
+    <link rel="stylesheet" href="/css/main.css">
 
     <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700,900&display=swap&subset=cyrillic-ext"
         rel="stylesheet">
@@ -23,12 +23,12 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.min.css">
 
     <!-- Owl Carousel -->
-    <link rel="stylesheet" href="libs/owlcarousel/owl.carousel.css">
-    <link rel="stylesheet" href="libs/owlcarousel/owl.theme.css">
+    <link rel="stylesheet" href="/libs/owlcarousel/owl.carousel.css">
+    <link rel="stylesheet" href="/libs/owlcarousel/owl.theme.css">
 
     <!-- FavIcons -->
-    <link rel="shortcut icon" href="img/favicons/favicon-48x48.ico" type="image/x-icon" />
-    <link rel="apple-touch-icon" href="img/favicons/apple-touch-icon.png">
+    <link rel="shortcut icon" href="/img/favicons/favicon-48x48.ico" type="image/x-icon" />
+    <link rel="apple-touch-icon" href="/img/favicons/apple-touch-icon.png">
 
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
